# playgroundHaskell

./: LICENSE  playground.cabal
app/: Main.hs
src/: Playground.hs
test/: Main.hs
