cabal-version:      3.0
name:               playground
version:            0.1.0.0
synopsis:           Useless project made to learn haskell
license:            BSD-3-Clause
license-file:       LICENSE
author:             prangel-git
maintainer:         62568827+prangel-git@users.noreply.github.com

build-type:         Simple

extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Playground
    build-depends:    base ^>=4.18.3.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable playground
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.3.0,
        playground
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite playground-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.3.0,
        playground,
        tasty,
        tasty-hunit
